--- a/Assets/style.css
+++ b/Assets/style.css
@@ -9,7 +9,6 @@
     
 }
 
-
 /* Header*/
 header {
     display: flex;
@@ -21,7 +20,6 @@ header {
     padding-bottom: 25px;
     background-color: #24252A;
 }
-
 
 /* Nav */
 li, a, button {
@@ -41,8 +39,6 @@ h2 {
     padding-top: 40px;
     color: indigo;
     font-style: italic;
-    text-decoration: underline;
-
 }
 
 .link {
@@ -71,45 +67,80 @@ button {
 button:hover {
     background-color: red;
 }
+/* End Nav */
 
 /* Body */
 body {
     background-image: linear-gradient(to right, #c6ffdd, #fbd786, #f7797d);
-    display: flexbox;
-    align-content: flex-start;
-
 }
 
 /* About */
-.bio-container {
+.about-container {
     display: flex;
-    flex-direction: row;
-
-    
-}
-
-.bio-photo {
-    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
     height: 500px;
     
 }
-.bio-copy {
-    width: 50%;
-    height: 500px;
-    
-}
-.copy-card{
-    background-color: rgba(255, 255, 255, 0.5);
+
+.card {
+    background-color: rgba(255, 255, 255, 0.2);
     border-width: 1px;
-    border-radius: 25px;
-    padding: 10px;
-    flex: 0 0 300px;
-    margin-top: 100px;
-    margin-left: 25px;
-    margin-right: 25px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
+    padding: 20px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
+    height: 400px;
+    width: 500px;
+}
+
+h3 {
+    color:rgb(63, 14, 98);
+    margin-top: 100px;
+}
+
+.card img {
+    height: 250px;
+    width: 250px;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+
+.caseStudycontainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 500px;
+}
+
+.caseStudycard {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 20px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    height: 200px;
+    width: 200px;
+}
+
+.caseStudycard2 {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-width: 1px;
+    border-radius: 50px;
+    padding: 20px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    height: 300px;
+    width: 300px;
+}
+
+
+
+
    
 
     
@@ -118,4 +149,4 @@ body {
 
   
 
-}
+
