--- a/Assets/style.css
+++ b/Assets/style.css
@@ -70,7 +70,7 @@ button:hover {
 
 /* Hero Image */
 .hero-container {
-  display:flex
+    display:flex
 }
 
 .hero-card img{
@@ -116,7 +116,7 @@ h3 {
     margin-top: 29px;
 }
 
-
+/* Case Study */
 .caseStudycontainer {
     display: flex;
     align-items: center;
@@ -161,6 +161,7 @@ h3 {
     width: 260px;
 }
 
+/* Contact */
 .contactContainer {
     display: flex;
     align-items: center;
@@ -172,6 +173,7 @@ h3 {
     margin-top: 40px;
 }
 
+/* Form */
 .form{
     display: flex;
     flex-direction: column;
@@ -205,6 +207,7 @@ h3 {
     color: black;
 }
 
+/* Footer */
 footer {
     width: 100%;
     height: 75px;
