--- a/Assets/style.css
+++ b/Assets/style.css
@@ -141,7 +141,7 @@ h3 {
     border-width: 1px;
     border-radius: 50px;
     padding: 20px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     height: 300px;
